change avt after log in

--- a/recruitment-website/src/main/resources/templates/index.html
+++ b/recruitment-website/src/main/resources/templates/index.html
@@ -56,10 +56,8 @@
               <a href="#" class="nav-item">
                 <i class="fas fa-bell"></i>
               </a>
-              <a href="/login" class="nav-item login">
-                <i class="fas fa-user"></i>
-                Đăng nhập
-              </a>
+              <a id="profileSection" class="nav-item login" href="/login"></a>
+
             </nav>
           </div>
         </div>
