--- a/recruitment-website/src/main/resources/static/css/dashboard.css
+++ b/recruitment-website/src/main/resources/static/css/dashboard.css
@@ -1171,3 +1171,11 @@ body {
     font-size: 1.5rem;
   }
 }
+
+
+/* .nav-item.login {
+  width: 30px;
+  height: 30px;
+  display: inline-block; 
+  overflow: hidden;
+} */
