--- a/recruitment-website/src/main/resources/templates/employer/login.html
+++ b/recruitment-website/src/main/resources/templates/employer/login.html
@@ -104,6 +104,6 @@
       </div>
     </div>
   </div>
-  <script th:src="@{/js/employer/login.js}"></script>
+  <script type="module" th:src="@{/js/employer/login.js}"></script>
 </body>
 </html>
