--- a/recruitment-website/src/main/resources/templates/employee/profile-detail.html
+++ b/recruitment-website/src/main/resources/templates/employee/profile-detail.html
@@ -25,7 +25,7 @@
             <nav class="nav-menu">
               <a href="/" class="nav-item">Trang chủ</a>
               <a href="/employer" class="nav-item">Nhà tuyển dụng</a>
-              <a href="#" class="nav-item">Ví</a>
+              <a href="/company" class="nav-item">Ví</a>
               <a href="#" class="nav-item"><i class="fas fa-bell"></i></a>
 
               <a href="/login" class="nav-item login"
@@ -61,15 +61,15 @@
             <i class="fas fa-user nav-list-icon"></i>
             Hồ Sơ Của Tôi
           </a>
-          <a href="/company" class="nav-list-link">
+          <a href="/company-profile" class="nav-list-link">
             <i class="fas fa-building nav-list-icon"></i>
             Công Ty Của Tôi
           </a>
-          <a href="/jobs" class="nav-list-link">
+          <a href="/jobs-profile" class="nav-list-link">
             <i class="fas fa-briefcase nav-list-icon"></i>
             Việc Làm Của Tôi
           </a>
-          <a href="/notifications" class="nav-list-link">
+          <!-- <a href="/notifications" class="nav-list-link">
             <i class="fas fa-bell nav-list-icon"></i>
             Thông Báo Việc Làm
           </a>
@@ -80,7 +80,7 @@
           <a href="/account" class="nav-list-link">
             <i class="fas fa-cog nav-list-icon"></i>
             Quản Lý Tài Khoản
-          </a>
+          </a> -->
         </nav>
 
         <button class="create-job-btn" id="createJobBtn">
