--- a/recruitment-website/src/main/resources/templates/employer/post-job.html
+++ b/recruitment-website/src/main/resources/templates/employer/post-job.html
@@ -105,6 +105,7 @@
         </div>
     </div>
     <script th:src="@{/js/employer/post-job.js}"></script>
+    <script th:src="@{/js/employer/header.js}"></script>
 </body>
 
 </html>
