employer: update dashboard + statistic

--- a/recruitment-website/src/main/resources/templates/employer/fragments/nav.html
+++ b/recruitment-website/src/main/resources/templates/employer/fragments/nav.html
@@ -8,9 +8,9 @@
            th:classappend="${requestURI == '/employer/post-job'} ? ' active' : ''"
            class="nav-tab">📝 Post Job</a>
 
-        <a th:href="@{/employer/manage-jobs}"
+        <!-- <a th:href="@{/employer/manage-jobs}"
            th:classappend="${requestURI == '/employer/manage-jobs'} ? ' active' : ''"
-           class="nav-tab">💼 Manage Jobs</a>
+           class="nav-tab">💼 Manage Jobs</a> -->
 
         <a th:href="@{/employer/candidates}"
            th:classappend="${requestURI == '/employer/candidates'} ? ' active' : ''"
