employer: update edit profile

--- a/recruitment-website/src/main/resources/templates/employer/home.html
+++ b/recruitment-website/src/main/resources/templates/employer/home.html
@@ -6,7 +6,6 @@
     <title>VietnamWorks</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.2/css/all.min.css">
     <link rel="stylesheet" th:href="@{/css/employer/home.css}">
-    <script th:src="@{/js/employer/home.js}" defer></script>
 </head>
 <body>
     <!-- Header -->
@@ -273,5 +272,6 @@
             <p th:text="${footerAddress}">Tầng 20, tòa nhà E.Town Central, 11 Đoàn Văn Bơ, Phường 13, Quận 4, TP.HCM, Vietnam</p>
         </div>
     </footer>
+    <script th:src="@{js/employer/home.js}"></script>
 </body>
 </html>
