--- a/recruitment-website/src/main/resources/templates/employee/company.html
+++ b/recruitment-website/src/main/resources/templates/employee/company.html
@@ -22,14 +22,14 @@
               />
             </a>
             <nav class="nav-menu">
-              <a href="#" class="nav-item"
+              <a href="/" class="nav-item"
                 ><i class="fas fa-home"></i> Trang chủ</a
               >
-              <a href="#" class="nav-item"
+              <a href="/employer" class="nav-item"
                 ><i class="fas fa-briefcase"></i> Nhà tuyển dụng</a
               >
               <a href="#" class="nav-item"><i class="fas fa-wallet"></i> Ví</a>
-              <a href="#" class="nav-item"
+              <a href="/login" class="nav-item"
                 ><i class="fas fa-sign-out-alt"></i> Đăng xuất</a
               >
             </nav>
@@ -55,37 +55,22 @@
             <p class="profile-incomplete-text">
               Hồ sơ chưa đủ điều kiện cho phép tìm kiếm
             </p>
-            <a href="#" class="setup-profile-btn">Thiết Lập Hồ Sơ</a>
+            <a href="/profile" class="setup-profile-btn">Thiết Lập Hồ Sơ</a>
           </div>
         </div>
         <nav class="nav-list">
-          <a href="#" class="nav-list-link"
+          <a href="/profile" class="nav-list-link"
             ><i class="fas fa-user nav-list-icon"></i> Hồ Sơ Của Tôi</a
           >
-          <a href="#" class="nav-list-link active"
+          <a href="/company-profile" class="nav-list-link active"
             ><i class="fas fa-building nav-list-icon"></i> Công Ty Của Tôi</a
           >
-          <a href="#" class="nav-list-link"
+          <a href="/jobs-profile" class="nav-list-link"
             ><i class="fas fa-briefcase nav-list-icon"></i> Việc Làm Của Tôi</a
-          >
-          <a href="#" class="nav-list-link"
-            ><i class="fas fa-bell nav-list-icon"></i> Thông Báo Việc Làm</a
-          >
-          <a href="#" class="nav-list-link"
-            ><i class="fas fa-file-invoice nav-list-icon"></i> Quản Lý Đơn
-            Hàng</a
-          >
-          <a href="#" class="nav-list-link"
-            ><i class="fas fa-cog nav-list-icon"></i> Quản Lý Tài Khoản</a
           >
         </nav>
         <div class="job-notifications">
-          <h4>Thông Báo Việc Làm</h4>
-          <ul id="jobNotificationsList"></ul>
-        </div>
-        <button class="create-job-btn" id="createJobBtn">
-          <i class="fas fa-plus"></i> Tạo Thông Báo Việc Làm
-        </button>
+
       </aside>
 
       <section class="main-content">
