employee api profile

--- a/recruitment-website/src/main/resources/templates/employee/profile.html
+++ b/recruitment-website/src/main/resources/templates/employee/profile.html
@@ -124,30 +124,31 @@
                   <i class="fas fa-upload"></i> Tải ảnh lên
                 </button>
               </div>
+
               <div class="profile-details">
                 <div class="detail-row">
                   <label>Họ và tên:</label>
-                  <span id="fullName">Vỹ Hà</span>
+                  <span id="fullName"></span>
                 </div>
                 <div class="detail-row">
                   <label>Email:</label>
-                  <span id="email">vy1098@gmail.com</span>
+                  <span id="email"></span>
                 </div>
                 <div class="detail-row">
                   <label>Số điện thoại:</label>
-                  <span id="phone">+84 123 456 789</span>
+                  <span id="phone"></span>
                 </div>
                 <div class="detail-row">
                   <label>Ngày sinh:</label>
-                  <span id="birthday">15/03/1990</span>
+                  <span id="birthday"></span>
                 </div>
                 <div class="detail-row">
                   <label>Giới tính:</label>
-                  <span id="gender">Nam</span>
+                  <span id="gender"></span>
                 </div>
                 <div class="detail-row">
                   <label>Địa chỉ:</label>
-                  <span id="address">123 Nguyễn Huệ, Quận 1, TP.HCM</span>
+                  <span id="address"></span>
                 </div>
               </div>
             </div>
@@ -161,12 +162,7 @@
               </button>
             </div>
             <div class="section-content">
-              <p id="careerObjective">
-                Tìm kiếm vị trí CEO/Giám đốc điều hành tại một công ty công nghệ
-                đầy tiềm năng. Với hơn 10 năm kinh nghiệm trong lĩnh vực quản lý
-                và phát triển kinh doanh, tôi mong muốn đóng góp vào sự phát
-                triển bền vững của doanh nghiệp.
-              </p>
+              <p id="careerObjective"></p>
             </div>
           </div>
 
@@ -257,7 +253,6 @@
             <select id="editGender" name="gender" required>
               <option value="Nam">Nam</option>
               <option value="Nữ">Nữ</option>
-              <option value="Khác">Khác</option>
             </select>
           </div>
           <div class="form-group">
